Pulled the JSON from Github, and connected to load the object in the HTML

--- a/main.html
+++ b/main.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>JSON Example</title>
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Faster+One" >
+    <link rel="stylesheet" href="style.css" >
     <script src="SuperHeroes.js" type="text/javascript"></script>
-    <link href="https://fonts.googleapis.com/css?family=Faster+One" rel="stylesheet">
 </head>
-<body>
+<body onload="heroes()">
     <header>
 
     </header>
@@ -15,10 +17,5 @@
 
         </section>
 
-<script>
-    let header = document.querySelector('header');
-    let section = document.querySelector('section');
-
-</script>
 </body>
 </html>
